from typing import Protocol, Any, Dict

class Api(Protocol):
    has: Dict[str, bool]

    async def watch_ticker(self, symbol: str, params: dict[str, Any] = ...) -> dict[str, Any]:...

    async def watch_balance(self, params: dict[str, Any] = ...) -> dict[str, Any]:...

    async def fetch_ticker(self, symbol: str, params: dict[str, Any] = ...) -> dict[str, Any]:...

    async def fetch_balance(self, params: dict[str, Any] = ...) -> dict[str, Any]: ...


    async def close(self) -> None: ...
    async def load_markets(self): ...
    