from dataclasses import dataclass

@dataclass
class Coin:
    address: str
    name: str